# modixfs

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  IMPROVEMENTS.md  README.md  install.sh  livefolders.yaml  tools.yaml
.github/workflows/: release.yml
docs/: blog-post-substack.md  building-tools.md  concurrency-refactor.md  livefoldersfs-vs-mcp.md  security.md
docs/plans/: 2026-05-18-external-tools-impl.md  2026-05-18-tool-manifest-install-design.md  2026-05-18-tool-manifest-install-impl.md  2026-05-18-yaml-file-behaviors-impl.md
examples/demo/: folder.yaml  how_to.md  notes.txt
examples/users/: folder.yaml
paper/: build.sh  header.tex  main.md  output.tex  references.bib
paper/figures/: gen_charts.py  matrix.md
research/: README.md
research/criteria/01-setup-complexity/: agentfs.md  run.sh  toolfs.md
research/criteria/02-llm-compatibility/: agentfs.md  notes.md  run.sh  toolfs.md
research/results/: summary.md
src/: config.rs  daemon.rs  doctor.rs  installer.rs  main.rs  manifest.rs  mcp.rs  secrets.rs  watcher.rs
src/fs/: how_to_gen.rs  inode.rs  invocation.rs  mod.rs  root_doc.rs  schema_gen.rs  sid.rs  slot_table.rs  vfs.rs
src/marketplace/: info.rs  mod.rs  publish.rs  resolve.rs  search.rs
src/mcp_proxy/: client.rs  mod.rs  server_pool.rs  socket_protocol.rs
src/registry/: mod.rs  session.rs  tool.rs
src/sandbox/: linux.rs  macos.rs  mod.rs  noop.rs
src/tools/: echo.rs  external.rs  github.rs  mod.rs
tests/: concurrency.rs  e2e_claude.rs
tools/scraper/: publish_all.py  requirements.txt  review.py  scrape.py
(+224 files in other folders)
