[package]
name = "modixfs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/natanloterio/modixfs"

[[bin]]
name = "modixfs"
path = "src/main.rs"

[dependencies]
fuser = "0.15"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
