[package]
name = "livefolders"
version = "0.10.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/natanloterio/LiveFolders"

[[bin]]
name = "livefolders"
path = "src/main.rs"

[dependencies]
fuser = "0.15"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
notify = { version = "6", features = ["macos_kqueue"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
regex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"
